# flaunt

./: README.md  justfile  setup.cfg
src/flaunt/: __init__.py  cli.py  lib.py
