[metadata]
name = flaunt
version = 0.1.0
license = MIT License
license_file = LICENSE
author = "Ujjwal Panda"
long_description = file: README.md
author_email = "ujjwalpanda97@gmail.com"
url = "https://github.com/astrogewgaw/flaunt"
long_description_content_type = text/markdown
description = "Download your fonts and show them off!"

project_urls = 
    Source Code = "https://github.com/astrogewgaw/flaunt"
    Bug Reports = "https://github.com/astrogewgaw/flaunt/issues"

classifiers =
    Operating System :: Unix
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
include_package_data = True

install_requires =
    rich
    click
    appdirs
    requests
    PyGithub
    fonttools
    rich-click
    prompt_toolkit

package_dir = 
    =src

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    flaunt = flaunt.cli:flaunt
